--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,6 @@ platform = espressif32
 board = esp32s3usbotg
 framework = arduino
 lib_deps = jonas-merkle/AS5047P@^2.2.2
+build_flags =
+  -D ARDUINO_USB_MODE=1
+  -D ARDUINO_USB_CDC_ON_BOOT=1
